[Server] 마이페이지 API 구현 (#84)
* implement mypage api

* refacotoring keyword service name
