# server/src/controllers/userController.ts
@@ -4,6 +4,7 @@ import { errors, success } from '../utils/response'
 import { AuthenticatedRequest } from '../middlewares/authenticateJWT'
 import { UserNotFoundError, userService } from '../services/userService'
 import { sectionService } from '../services/sectionService'
+import { keywordService } from '../services/keywordService'
 
 /**
  * 사용자의 닉네임을 업데이트하는 컨트롤러입니다.
@@ -168,6 +169,40 @@ export const getUserSectionPreferences = async (req: AuthenticatedRequest, res: 
     })
   } catch (error) {
     console.error('Error retrieving user section preferences:', error)
+    return errors.internal(res)
+  }
+}
+
+/**
+ * 사용자의 통계 정보를 조회하는 컨트롤러입니다.
+ * 사용자가 인증된 상태에서 자신의 통계 정보를 조회할 수 있습니다.
+ * @param {AuthenticatedRequest} req - 인증된 사용자 요청 객체. userId가 포함되어야 합니다.
+ * @param {Response} res - Express 응답 객체.
+ * @example
+ * // 요청 예시
+ * GET /api/users/stats
+ * @returns {Promise<Response>} 사용자의 통계 정보를 포함한 응답 객체
+ */
+export const getMyPageStats = async (req: AuthenticatedRequest, res: Response): Promise<Response> => {
+  const userId = req.userId
+  if (!userId) {
+    return errors.unauthorized(res, 'User ID is required')
+  }
+
+  try {
+    const user = await userService.findUserById(userId)
+    const sectionStats = await sectionService.getUserSectionStats(userId)
+    const keywordStats = await keywordService.getUserKeywordStats(userId)
+
+    return success(
+      res,
+      { user, sectionStats, keywordStats },
+      {
+        message: 'User stats retrieved successfully',
+      },
+    )
+  } catch (error) {
+    console.error('Error retrieving user stats:', error)
     return errors.internal(res)
   }
 }
